[SIX-212] refactor : 서비스 로직에서의 대표 이미지 조회 가독성 수정